--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -73,12 +73,12 @@
         app:layout_constraintTop_toBottomOf="@+id/title"
         tools:text="Beatles" />
 
-    <ImageView
+    <ImageButton
         android:id="@+id/play_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dp_30"
-        android:background="@drawable/ic_play"
+        android:src="@drawable/ic_play"
         app:layout_constraintEnd_toStartOf="@+id/rightBorder"
         app:layout_constraintStart_toStartOf="@+id/leftBorder"
         app:layout_constraintTop_toBottomOf="@+id/artist_name" />
