--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -79,6 +79,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dp_30"
         android:src="@drawable/ic_play"
+        android:background="?attr/selectableItemBackgroundBorderless"
         app:layout_constraintEnd_toStartOf="@+id/rightBorder"
         app:layout_constraintStart_toStartOf="@+id/leftBorder"
         app:layout_constraintTop_toBottomOf="@+id/artist_name" />
