--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -23,11 +23,13 @@
     <dimen name="dp_30">30dp</dimen>
     <dimen name="dp_36">36dp</dimen>
     <dimen name="dp_45">45dp</dimen>
+    <dimen name="dp_46">46dp</dimen>
+    <dimen name="dp_48">48dp</dimen>
     <dimen name="dp_56">56dp</dimen>
     <dimen name="dp_61">61dp</dimen>
+    <dimen name="dp_106">106dp</dimen>
     <dimen name="dp_120">120dp</dimen>
     <dimen name="dp_312">312dp</dimen>
-
 
     <!--weight-->
     <dimen name="weight_1">1</dimen>
