--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -168,6 +168,18 @@
         <item name="android:fontFamily">@font/ys_display_medium</item>
         <item name="android:textColor">?attr/colorOnPrimary</item>
     </style>
+    <style name="TabLayout" parent="Widget.MaterialComponents.TabLayout">
+        <item name="android:fontFamily">@font/ys_display_medium</item>
+        <item name="android:textSize">@dimen/text_14</item>
+        <item name="tabTextAppearance">@android:style/TextAppearance.Widget.TabWidget</item>
+    </style>
+    <style name="PlaceholderTextTabLay" parent="Widget.MaterialComponents.TextView">
+        <item name="fontFamily">@font/ys_display_medium</item>
+        <item name="android:textColor">?attr/colorOnPrimary</item>
+        <item name="android:textFontWeight">400</item>
+        <item name="android:textSize">@dimen/text_19</item>
+        <item name="android:gravity">center</item>
+    </style>
 
 </resources>
 
