--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -5,11 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?attr/colorPrimary"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:theme="@style/Theme.PlaylistMakerSearch"
+    tools:context=".search.ui.SearchFragment">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
-        style="@style/toolbar_dimensions"
+        style="@style/fragment_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:title="@string/search"
@@ -58,7 +60,7 @@
         android:layout_height="match_parent"
         android:layout_marginTop="@dimen/dp_16"
         android:visibility="gone"
-        tools:listitem="@layout/activity_search_item">
+        tools:listitem="@layout/item_search">
 
     </androidx.recyclerview.widget.RecyclerView>
 
@@ -122,7 +124,7 @@
             android:layout_height="0dp"
             android:layout_marginTop="@dimen/dp_8"
             android:layout_weight="1"
-            tools:listitem="@layout/activity_search_item">
+            tools:listitem="@layout/item_search">
 
         </androidx.recyclerview.widget.RecyclerView>
 
